SQLEX-6 # [CI] Add Gitlab utilities

--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,13 @@
+[flake8]
+ignore = D203, W291
+max-line-length = 120
+exclude =
+	.git,
+	migrations,
+	__pycache__,
+	setup.py,
+max-complexity = 10
+
 [pytest]
 addopts = -r chars
 		  -v
