--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 attrs==19.3.0
 coverage==5.0.4
+entrypoints==0.3
+flake8==3.7.9
 importlib-metadata==1.6.0
+mccabe==0.6.1
 more-itertools==8.2.0
 packaging==20.3
 pluggy==0.13.1
 py==1.8.1
+pycodestyle==2.5.0
+pyflakes==2.1.1
 PyMySQL==0.9.3
 pyparsing==2.4.6
 pytest==5.4.1
